# allweather-quant-lab

./: .coverage  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  demo.py  docker-compose.yml  env.example  pyproject.toml  start_app.py  start_app.sh  test_api.py  test_backtest_fix.py  test_button_navigation.py  test_manage_policies_button.py  test_manage_policies_final.py  test_navigation.py  test_policy_management.py  test_simple_backtest.py  test_ui_fix.py
api/: __init__.py  main.py  schemas.py
app/: ui.py
configs/: backtest.yaml  data.yaml  universe.yaml
configs/policy.examples/: aggressive.yaml  balanced.yaml  conservative.yaml
engine/: __init__.py  config.py
engine/backtest/: __init__.py  costs.py  evaluation.py  simulator.py
engine/data/: __init__.py  fred.py  loaders.py  transforms.py  universe.py
engine/optimize/: __init__.py  constraints.py  gmv.py  omega.py
engine/report/: __init__.py  charts.py  client_memo.py
engine/signals/: __init__.py  features.py  regimes.py
engine/utils/: __init__.py  dates.py  io.py  logging.py
research/: 00_data_audit.ipynb
scripts/: download_sample_data.py
tests/: test_api.py  test_backtest.py  test_data.py  test_optimize_gmv.py  test_optimize_omega.py
